--- a/.gitignore
+++ b/.gitignore
@@ -90,3 +90,10 @@ dist
 
 # Stores VSCode versions used for testing VSCode extensions
 .vscode-test
+
+# TypeScript declaration files
+*.d.ts
+node_modules/@types/
+
+# Node.js TypeScript declaration files
+node_modules/@types/node/*.d.ts
